@@ -28,6 +28,9 @@
 gint gnet_pack (const gchar* format, gchar* buffer, const guint len, ...);
 gint gnet_pack_strdup (const gchar* format, gchar** buffer, ...);
 gint gnet_vpack (const gchar* format, gchar* buffer, const guint len, va_list args);
+
+gint gnet_calcsize (const gchar* format, ...);
+gint gnet_vcalcsize (const gchar* format, va_list args);
      
 gint gnet_unpack (const gchar* format, gchar* buffer, gint len, ...);
 gint gnet_vunpack (const gchar* format, gchar* buffer, gint len, va_list args);
