@@ -1,3 +1,13 @@
+Thu May 10 10:22:46 2001  David Helder  <dhelder@umich.edu>
+
+	* src/tcp.c (gnet_tcp_socket_server_new_interface): 
+	   If iface is NULL, the OS will choose the address and 
+	   port.
+	* src/server.c (gnet_server_new): Allow iface to be NULL
+	
+	* src/pack.c (gnet_calcsize): Added
+	* src/pack.c (gnet_vcalcsize): Exposed
+
 Wed Apr 25 14:27:26 2001  David Helder  <dhelder@umich.edu>
 
 	* src/server.[hc] (gnet_server_new): Changed prototype
